--- a/Hospital.WPF/Controls/Ambulatory/AmbDiagnostic.xaml
+++ b/Hospital.WPF/Controls/Ambulatory/AmbDiagnostic.xaml
@@ -23,14 +23,6 @@
                 <PropertyGroupDescription PropertyName="Test.TestType"/>
             </CollectionViewSource.GroupDescriptions>
         </CollectionViewSource>
-        <CollectionViewSource x:Key="cvsAllDiag" Source="{Binding TestData}">
-            <CollectionViewSource.GroupDescriptions>
-                <PropertyGroupDescription PropertyName="Test.TestType.TestMethod"/>
-                <PropertyGroupDescription PropertyName="Test.TestType"/>
-            </CollectionViewSource.GroupDescriptions>
-        </CollectionViewSource>
-
-
 
         <Style x:Key="tb_editing" TargetType="{x:Type TextBox}">
             <Setter Property="FontSize" Value="15"/>
@@ -50,22 +42,58 @@
     <Grid>
         <StackPanel Orientation="Vertical">
 
-            <Expander IsExpanded="True" Template="{StaticResource ExpanderDiagTable}">
+            <Expander IsExpanded="false" Template="{StaticResource ExpanderDiagTable}" Name="exp_physDiag">
                 <Expander.Header>
                     <Grid>
                         <StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
                             <TextBlock Text="ФИЗИКАЛЬНАЯ ДИАГНОСТИКА" FontSize="14" VerticalAlignment="Center" FontWeight="SemiBold" Foreground="{StaticResource BrushForegroundLight}"/>
                             <TextBlock Padding="10,0" Text="{Binding PhysicalDiagData.Count, StringFormat=Всего: {0}}" VerticalAlignment="Center" Foreground="{StaticResource BrushForegroundLight}" />
                         </StackPanel>
-                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Visibility="{Binding ElementName=exp_physDiag, Path=IsExpanded, Converter={StaticResource BooleanToVisibilityConverter}}">
                             <Button Content="-" Style="{StaticResource MahApps.Styles.Button.Flat}" VerticalAlignment="Center" MinHeight="0" Height="35" Width="35" Padding="0"/>
-                            <CheckBox x:Name="cb_ItemBarPhysDiag" Content="+" IsChecked="True" Style="{StaticResource  MahApps.Styles.Button.Flat}" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" VerticalAlignment="Center" MinHeight="0" Height="35" Width="35" Padding="0"/>
+                            <CheckBox x:Name="cb_ItemBarPhysDiag" Content="+" IsChecked="False" Style="{StaticResource  MahApps.Styles.Button.Flat}" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" VerticalAlignment="Center" MinHeight="0" Height="35" Width="35" Padding="0"/>
                         </StackPanel>
                     </Grid>
                 </Expander.Header>
 
                 <StackPanel Orientation="Vertical">
-                    <Grid Visibility="{Binding ElementName=cb_ItemBarPhysDiag, Path=IsChecked, Converter={StaticResource BooleanToVisibilityConverter}}">
+                    
+                    <Grid x:Name="test1" Visibility="Collapsed">
+                        <Grid.Resources>
+                            <Style TargetType="{x:Type Grid}">
+                                <Style.Triggers>
+                                    <DataTrigger Binding="{Binding ElementName=cb_ItemBarPhysDiag, Path=IsChecked}" Value="true">
+                                        <DataTrigger.EnterActions>
+                                            <BeginStoryboard>
+                                                <Storyboard>
+                                                    <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Visibility">
+                                                        <DiscreteObjectKeyFrame KeyTime="0" Value="{x:Static Visibility.Visible}"/>
+                                                    </ObjectAnimationUsingKeyFrames>
+                                                    <DoubleAnimation Storyboard.TargetProperty="(ContentPresenter.LayoutTransform).(ScaleTransform.ScaleY)"
+                                                                     To="1" 
+                                                                     Duration="0:0:0.2"/>
+                                                </Storyboard>
+                                            </BeginStoryboard>
+                                        </DataTrigger.EnterActions>
+                                        <DataTrigger.ExitActions>
+                                            <BeginStoryboard>
+                                                <Storyboard>
+                                                    <DoubleAnimation Storyboard.TargetProperty="(ContentPresenter.LayoutTransform).(ScaleTransform.ScaleY)"
+                                                                     To="0" 
+                                                                     Duration="0:0:0.2"/>
+                                                    <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Visibility">
+                                                        <DiscreteObjectKeyFrame KeyTime="0:0:0.3" Value="{x:Static Visibility.Collapsed}"/>
+                                                    </ObjectAnimationUsingKeyFrames>
+                                                </Storyboard>
+                                            </BeginStoryboard>
+                                        </DataTrigger.ExitActions>
+                                    </DataTrigger>
+                                </Style.Triggers>
+                            </Style>
+                        </Grid.Resources>
+                        <Grid.LayoutTransform>
+                            <ScaleTransform ScaleY="0"/>
+                        </Grid.LayoutTransform>
                         <Grid.RowDefinitions>
                             <RowDefinition Height="35"/>
                             <RowDefinition Height="35"/>
@@ -155,7 +183,7 @@
                 </DataGrid>
             </Expander>
 
-            <Expander Header="ИНСТРУМЕНТАЛЬНАЯ ДИАГНОСТИКА" IsExpanded="True" Template="{StaticResource ExpanderDiagTable}">
+            <Expander Header="ИНСТРУМЕНТАЛЬНАЯ ДИАГНОСТИКА" IsExpanded="False" Template="{StaticResource ExpanderDiagTable}">
                 <DataGrid ItemsSource="{Binding Source={StaticResource cvsToolDiag}}" Sorting="DataGrid_Sorting"
                       CanUserAddRows="False" CanUserDeleteRows="False" IsReadOnly="False" mah:DataGridHelper.EnableCellEditAssist="False"
                       Style="{StaticResource  dg_style}" ColumnWidth="Auto">
@@ -166,7 +194,7 @@
                                     <Setter Property="Template">
                                         <Setter.Value>
                                             <ControlTemplate TargetType="{x:Type GroupItem}">
-                                                <Expander IsExpanded="True" Template="{StaticResource ExpanderDiagLabTable}">
+                                                <Expander IsExpanded="true" Template="{StaticResource ExpanderDiagLabTable}">
                                                     <Expander.Header>
                                                         <TextBlock Text="{Binding Path=Name.Title}" FontSize="15" Foreground="{DynamicResource BrushForegroundLight}"/>
                                                     </Expander.Header>
@@ -196,78 +224,6 @@
                 </DataGrid>
 
             </Expander>
-
-            <DataGrid ItemsSource="{Binding Source={StaticResource cvsAllDiag}}" Sorting="DataGrid_Sorting" Visibility="Hidden"
-                      CanUserAddRows="False" CanUserDeleteRows="False" IsReadOnly="False" mah:DataGridHelper.EnableCellEditAssist="False"
-                      Style="{StaticResource TableCommon}" ColumnWidth="Auto">
-                <DataGrid.CellStyle>
-                    <Style TargetType="{x:Type DataGridCell}" BasedOn="{StaticResource TableCell}">
-                        <Setter Property="Padding" Value="5,0"/>
-                    </Style>
-                </DataGrid.CellStyle>
-                <DataGrid.GroupStyle>
-                    <GroupStyle>
-                        <GroupStyle.ContainerStyle>
-                            <Style TargetType="{x:Type GroupItem}">
-                                <Setter Property="Template">
-                                    <Setter.Value>
-                                        <ControlTemplate TargetType="{x:Type GroupItem}">
-                                            <Expander Template="{StaticResource ExpanderDiagTable}">
-                                                <Expander.Header>
-                                                    <TextBlock Text="{Binding Path=Name, Converter={StaticResource ToUpperCaseConverter}, StringFormat={}{0} ДИАГНОСТИКА}" FontSize="14" FontWeight="DemiBold" Foreground="{DynamicResource BrushForegroundLight}"/>
-                                                </Expander.Header>
-                                                <Expander.Content>
-                                                    <ItemsPresenter/>
-                                                </Expander.Content>
-                                            </Expander>
-                                        </ControlTemplate>
-                                    </Setter.Value>
-                                </Setter>
-                            </Style>
-                        </GroupStyle.ContainerStyle>
-                    </GroupStyle>
-                    <GroupStyle>
-                        <GroupStyle.ContainerStyle>
-                            <Style TargetType="{x:Type GroupItem}">
-                                <Setter Property="Template">
-                                    <Setter.Value>
-                                        <ControlTemplate TargetType="{x:Type GroupItem}">
-                                            <Expander IsExpanded="True" Template="{StaticResource ExpanderDiagLabTable}">
-                                                <Expander.Header>
-                                                    <TextBlock Text="{Binding Path=Name.Title}" FontSize="15" Foreground="{DynamicResource BrushForegroundLight}"/>
-                                                </Expander.Header>
-                                                <Expander.Content>
-                                                    <ItemsPresenter/>
-                                                </Expander.Content>
-                                            </Expander>
-                                        </ControlTemplate>
-                                    </Setter.Value>
-                                </Setter>
-                            </Style>
-                        </GroupStyle.ContainerStyle>
-                    </GroupStyle>
-                </DataGrid.GroupStyle>
-                <DataGrid.Columns>
-                    <DataGridTextColumn Header="ID" Binding="{Binding Id}" IsReadOnly="True" MinWidth="35" Width="35"/>
-                    <DataGridTextColumn Header="КОД" Binding="{Binding Test.Id}" IsReadOnly="True" Width="60" MinWidth="50"/>
-                    <DataGridTextColumn Header="НАЗВАНИЕ" Binding="{Binding Test.ShortTitle}" IsReadOnly="True"/>
-                    <DataGridTextColumn Header="ОПЦИЯ" Binding="{Binding Option}"  EditingElementStyle="{StaticResource tb_editing}"/>
-                    <DataGridTextColumn Header="РЕЗУЛЬТАТ" Binding="{Binding Value}"  EditingElementStyle="{StaticResource tb_editing}"/>
-                    <DataGridTextColumn Header="НОРМА" MaxWidth="80"  IsReadOnly="True">
-                        <DataGridTextColumn.Binding>
-                            <MultiBinding StringFormat="{}{0} {1}">
-                                <Binding Path="Test.NormalValues"/>
-                                <Binding Path="Test.Measure"/>
-                            </MultiBinding>
-                        </DataGridTextColumn.Binding>
-                    </DataGridTextColumn>
-                    <DataGridCheckBoxColumn Header="СИМПТОМ" Binding="{Binding IsSymptom}" MinWidth="30" Width="*"/>
-                    <DataGridTextColumn Header="СТАТУС ЗАЯВКИ" Binding="{Binding Status}"  IsReadOnly="True"/>
-                    <DataGridTextColumn Header="ИСПОЛНИТЕЛЬ" Binding="{Binding StaffResult.FirstName}"  IsReadOnly="True"/>
-                    <DataGridTextColumn Header="ДАТА ЗАЯВКИ" Binding="{Binding DateCreate, StringFormat=dd.MM.yy HH:mm}"  IsReadOnly="True"/>
-                    <DataGridTextColumn Header="ДАТА РЕЗУЛЬТАТА" Binding="{Binding DateResult, StringFormat=dd.MM.yy HH:mm}"  IsReadOnly="True"/>
-                </DataGrid.Columns>
-            </DataGrid>
 
         </StackPanel>
 
