--- a/Hospital.WPF/Controls/Ambulatory/AmbDiagnostic.xaml
+++ b/Hospital.WPF/Controls/Ambulatory/AmbDiagnostic.xaml
@@ -31,9 +31,13 @@
         </Style>
         <Style x:Key="dgc_style" TargetType="{x:Type DataGridCell}" BasedOn="{StaticResource TableCell}">
             <Setter Property="Padding" Value="5"/>
+            <Setter Property="HorizontalContentAlignment" Value="Center"/>
         </Style>
         <Style x:Key="dg_style" TargetType="{x:Type DataGrid}" BasedOn="{StaticResource TableCommon}">
             <Setter Property="BorderThickness" Value="0,3,0,0"/>
+            <Setter Property="IsReadOnly" Value="False"/>
+            <Setter Property="CanUserAddRows" Value="False"/>
+            <Setter Property="CanUserDeleteRows" Value="False"/>
             <Setter Property="CellStyle" Value="{StaticResource dgc_style}"/>
         </Style>
 
@@ -57,8 +61,7 @@
                 </Expander.Header>
 
                 <StackPanel Orientation="Vertical">
-                    
-                    <Grid x:Name="test1" Visibility="Collapsed">
+                    <Grid x:Name="test1" Visibility="Collapsed" Margin="0,5,0,10">
                         <Grid.Resources>
                             <Style TargetType="{x:Type Grid}">
                                 <Style.Triggers>
@@ -82,7 +85,7 @@
                                                                      To="0" 
                                                                      Duration="0:0:0.2"/>
                                                     <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Visibility">
-                                                        <DiscreteObjectKeyFrame KeyTime="0:0:0.3" Value="{x:Static Visibility.Collapsed}"/>
+                                                        <DiscreteObjectKeyFrame KeyTime="0:0:0.2" Value="{x:Static Visibility.Collapsed}"/>
                                                     </ObjectAnimationUsingKeyFrames>
                                                 </Storyboard>
                                             </BeginStoryboard>
@@ -94,30 +97,59 @@
                         <Grid.LayoutTransform>
                             <ScaleTransform ScaleY="0"/>
                         </Grid.LayoutTransform>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="0.5*" MinWidth="75"/>
+                            <ColumnDefinition MaxWidth="150" MinWidth="100"/>
+                            <ColumnDefinition MaxWidth="300" MinWidth="150"/>
+                            <ColumnDefinition MaxWidth="300" MinWidth="150"/>
+                            <ColumnDefinition MaxWidth="300" MinWidth="150"/>
+                            <ColumnDefinition Width="50"/>
+                            <ColumnDefinition Width="0.5*"/>
+                        </Grid.ColumnDefinitions>
                         <Grid.RowDefinitions>
-                            <RowDefinition Height="35"/>
-                            <RowDefinition Height="35"/>
+                            <RowDefinition Height="45"/>
+                            <RowDefinition Height="45"/>
                         </Grid.RowDefinitions>
-                        <StackPanel Orientation="Horizontal">
-                            <ComboBox IsEditable="True" IsTextSearchEnabled="True" IsTextSearchCaseSensitive="False"
+                        
+                        <TextBlock Text="Шаблон" Grid.Column="0" Grid.Row="0" HorizontalAlignment="Right" Padding="10,0" VerticalAlignment="Center" FontSize="15" Foreground="{StaticResource BrushForegroundVeryLight}"/>
+                        <TextBlock Text="Тест" Grid.Column="0" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Center" Padding="10,0" FontSize="15" Foreground="{StaticResource BrushForegroundVeryLight}"/>
+                        
+                        <ComboBox Grid.Row="0" Grid.Column="1" Margin="10,5" MinHeight="0"/>
+                        <ComboBox   Grid.Row="1" Grid.Column="1" Margin="10,5" MinHeight="0"
+                            IsEditable="True" IsTextSearchEnabled="True" IsTextSearchCaseSensitive="False"
                                 ItemsSource="{Binding PhysicalTestList, IsAsync=True, UpdateSourceTrigger=PropertyChanged}"
                                 SelectedValue="{Binding SelectedTest.Id}" DisplayMemberPath="Id" SelectedValuePath="Id"
                                 SelectedItem="{Binding SelectedTest}"/>
-                            <ComboBox IsEditable="True" IsTextSearchEnabled="True" IsTextSearchCaseSensitive="False"
+
+                        <ComboBox Grid.Row="0" Grid.Column="2" Grid.ColumnSpan="3" Margin="0,5,55,5"
+                                  IsEditable="True" IsTextSearchEnabled="True" IsTextSearchCaseSensitive="False"
+                                  ItemsSource="{Binding PhysicalTestTemplate, IsAsync=True, UpdateSourceTrigger=PropertyChanged}"
+                                  SelectedValue="{Binding SelectedTemplate.Title}" DisplayMemberPath="Title" SelectedValuePath="Title"
+                                  SelectedItem="{Binding SelectedTemplate}"/>
+                        <Button Grid.Row="0" Grid.Column="4" HorizontalAlignment="Right" Width="40" Content="edit" Margin="5,5"/>
+                        <ComboBox Grid.Row="1" Grid.Column="2"  Margin="0,5,5,5"
+                                  IsEditable="True" IsTextSearchEnabled="True" IsTextSearchCaseSensitive="False"
                                 ItemsSource="{Binding PhysicalTestList, IsAsync=True, UpdateSourceTrigger=PropertyChanged}"
                                 SelectedValue="{Binding SelectedTest.Title}" DisplayMemberPath="Title" SelectedValuePath="Title"
                                 SelectedItem="{Binding SelectedTest}"/>
-                            <Button Content="create" Command="{Binding RelativeSource={RelativeSource AncestorType={x:Type view:Ambulatory}}, Path=Command.AddRow}"/>
-                        </StackPanel>
+
+                        <TextBox Grid.Row="1" Grid.Column="3" Margin="5,5" x:Name="tb_TestOption" Text="{Binding TestOption}"/>
+                        <TextBox Grid.Row="1" Grid.Column="4" Margin="5,5" x:Name="tb_TestValue" />
+
+                        <Button Grid.Column="5" Grid.Row="0" Content="create" HorizontalAlignment="Left" Margin="5,5"
+                                Command="{Binding RelativeSource={RelativeSource AncestorType={x:Type view:Ambulatory}}, Path=Command.AddTemplate}"/>
+                        <Button Grid.Column="5" Grid.Row="1" Content="create" HorizontalAlignment="Left" Margin="5,5"
+                                Command="{Binding RelativeSource={RelativeSource AncestorType={x:Type view:Ambulatory}}, Path=Command.AddRow}" CommandParameter="{Binding ElementName=tb_TestValue, Path=Text}"/>
+                    
                     </Grid>
 
-                    <DataGrid ItemsSource="{Binding PhysicalDiagData, UpdateSourceTrigger=PropertyChanged}" Style="{StaticResource dg_style}">
+                    <DataGrid ItemsSource="{Binding PhysicalDiagData}" Style="{StaticResource dg_style}">
                         <DataGrid.Columns>
                             <DataGridTextColumn Header="ID" Binding="{Binding Id}" IsReadOnly="True" MinWidth="35" Width="35"/>
                             <DataGridTextColumn Header="КОД" Binding="{Binding Test.Id}" IsReadOnly="True" Width="60" MinWidth="50"/>
-                            <DataGridTextColumn Header="НАЗВАНИЕ" Binding="{Binding Test.ShortTitle}" IsReadOnly="True"/>
-                            <DataGridTextColumn Header="ОПЦИЯ" Binding="{Binding Option}"  EditingElementStyle="{StaticResource tb_editing}"/>
-                            <DataGridTextColumn Header="ЗАКЛЮЧЕНИЕ" Binding="{Binding Value}"  EditingElementStyle="{StaticResource tb_editing}"/>
+                            <DataGridTextColumn Header="НАЗВАНИЕ" Binding="{Binding Test.ShortTitle}" IsReadOnly="True" Width="*"/>
+                            <DataGridTextColumn Header="ОПЦИЯ" Binding="{Binding Option}"  EditingElementStyle="{StaticResource tb_editing}" Width="*"/>
+                            <DataGridTextColumn Header="ЗАКЛЮЧЕНИЕ" Binding="{Binding Value}"  EditingElementStyle="{StaticResource tb_editing}" Width="*"/>
                             <DataGridTextColumn Header="НОРМА" MaxWidth="80"  IsReadOnly="True">
                                 <DataGridTextColumn.Binding>
                                     <MultiBinding StringFormat="{}{0} {1}">
@@ -126,7 +158,8 @@
                                     </MultiBinding>
                                 </DataGridTextColumn.Binding>
                             </DataGridTextColumn>
-                            <DataGridCheckBoxColumn Header="СИМПТОМ" Binding="{Binding IsSymptom}" MinWidth="30" Width="*"/>
+                            <DataGridCheckBoxColumn Header="СИМПТОМ" Binding="{Binding IsSymptom}" MinWidth="30" Width="80"/>
+                            <DataGridTextColumn Header="СТАТУС" Binding="{Binding Status}" IsReadOnly="True" Width="100"/>
                             <DataGridTextColumn Header="ДАТА РЕЗУЛЬТАТА" Binding="{Binding DateResult, StringFormat=dd.MM.yy HH:mm}"  IsReadOnly="True"/>
                         </DataGrid.Columns>
                     </DataGrid>
@@ -134,7 +167,7 @@
                 
             </Expander>
 
-            <Expander Header="ЛАБАРАТОРНАЯ ДИАГНОСТИКА" IsExpanded="True" Template="{StaticResource ExpanderDiagTable}">
+            <Expander Header="ЛАБАРАТОРНАЯ ДИАГНОСТИКА" IsExpanded="False" Template="{StaticResource ExpanderDiagTable}">
                 <DataGrid ItemsSource="{Binding Source={StaticResource cvsLabDiag}}" Sorting="DataGrid_Sorting"
                       CanUserAddRows="False" CanUserDeleteRows="False" IsReadOnly="False" mah:DataGridHelper.EnableCellEditAssist="False"
                       Style="{StaticResource  dg_style}" ColumnWidth="Auto">
