--- a/Hospital.WPF/Resources/Dictionary.xaml
+++ b/Hospital.WPF/Resources/Dictionary.xaml
@@ -1,14 +1,14 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:ser="clr-namespace:Hospital.WPF.Services"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:icon="http://metro.mahapps.com/winfx/xaml/iconpacks"
                     xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls">
 
     <!--path-->
 
     <Geometry x:Key="treeIconLeft">M10,17L15,12L10,7V17Z</Geometry>
     <Geometry x:Key="treeIconDown">M7,10L12,15L17,10H7Z</Geometry>
-
+    <Geometry x:Key="sortArrowDown">M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z</Geometry>
+    <Geometry x:Key="sortArrowUp">M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z</Geometry>
     
     <!--converters-->
 
@@ -448,7 +448,6 @@
         </ControlTemplate.Triggers>
     </ControlTemplate>
 
-
     <!--listBoxItem-->
 
     <SolidColorBrush x:Key="Item.MouseOver.Background" Color="#1F26A0DA"/>
@@ -650,7 +649,6 @@
             </Trigger>
         </Style.Triggers>
     </Style>
-
     <Style x:Key="TableCell" TargetType="{x:Type DataGridCell}">
         <Setter Property="Template">
             <Setter.Value>
@@ -679,7 +677,6 @@
             </Trigger>
         </Style.Triggers>
     </Style>
-
     <Style TargetType="{x:Type DataGrid}" x:Key="TableCommon" BasedOn="{StaticResource MahApps.Styles.DataGrid}">
         <Setter Property="AlternatingRowBackground" Value="{DynamicResource BrushTableRowAlternationBackgroud}"/>
         <Setter Property="AutoGenerateColumns" Value="False"/>
@@ -708,6 +705,124 @@
                 </Style>
             </Setter.Value>
         </Setter>
+    </Style>
+
+    <!--DataGridAmbulatory-->
+
+    <Style x:Key="dg_ColumnHeaderAmbulatory" TargetType="{x:Type DataGridColumnHeader}">
+        <Style.Triggers>
+            <MultiTrigger>
+                <MultiTrigger.Conditions>
+                    <Condition Property="IsMouseOver" Value="True" />
+                    <Condition Property="SortDirection" Value="{x:Null}" />
+                </MultiTrigger.Conditions>
+                <Setter Property="Background" Value="{DynamicResource MahApps.Brushes.Gray8}" />
+            </MultiTrigger>
+            <Trigger Property="IsEnabled" Value="False">
+                <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.GrayTextBrushKey}}" />
+            </Trigger>
+        </Style.Triggers>
+        <Setter Property="Background" Value="{DynamicResource BrushTableHeader}" />
+        <Setter Property="BorderBrush" Value="{DynamicResource BrushAccent1}" />
+        <Setter Property="BorderThickness" Value="0,3,0,0"/>
+        <Setter Property="Cursor" Value="Hand" />
+        <Setter Property="FontWeight" Value="SemiBold" />
+        <Setter Property="Foreground" Value="{DynamicResource BrushForegroundLight}" />
+        <Setter Property="Margin" Value="0"/>
+        <Setter Property="MinHeight" Value="35" />
+        <Setter Property="MinWidth" Value="0"/>
+        <Setter Property="Padding" Value="{Binding Path=(mah:DataGridHelper.ColumnHeaderPadding), FallbackValue=0, TargetNullValue=0, Mode=OneWay, RelativeSource={RelativeSource AncestorType={x:Type DataGrid}}}" />
+        <Setter Property="SnapsToDevicePixels" Value="True" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type DataGridColumnHeader}">
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="Auto" />
+                        </Grid.ColumnDefinitions>
+                        <Border Name="BackgroundBorder"
+                                Grid.ColumnSpan="2"
+                                Background="{TemplateBinding Background}"
+                                BorderBrush="{TemplateBinding BorderBrush}"
+                                BorderThickness="{TemplateBinding BorderThickness}" />
+                        <ContentControl Name="HeaderContent" Grid.Column="0"
+                                              Margin="{TemplateBinding BorderThickness}"
+                                              Padding="{TemplateBinding Padding}"
+                                              HorizontalContentAlignment="Center"
+                                              VerticalContentAlignment="Center"
+                                              HorizontalAlignment="Center"
+                                              VerticalAlignment="Center"
+                                              Content="{TemplateBinding Content}"
+                                              ContentStringFormat="{TemplateBinding ContentStringFormat, Converter={StaticResource ToUpperCaseConverter}}"
+                                              ContentTemplate="{TemplateBinding ContentTemplate}"
+                                              ContentTemplateSelector="{TemplateBinding ContentTemplateSelector}"
+                                              SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
+                        <Path Name="SortArrow" Grid.Column="1" Width="10" Height="6" Margin="5,0,10,0" HorizontalAlignment="Center" VerticalAlignment="Center" Fill="{DynamicResource BrushForegroundLight}"
+                              Stretch="Fill" Visibility="Collapsed" />
+                        <Thumb Name="PART_LeftHeaderGripper"
+                               HorizontalAlignment="Left"
+                               Background="Transparent"
+                               Style="{StaticResource MahApps.Styles.Thumb.ColumnHeaderGripper}" />
+                    </Grid>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="SortDirection" Value="Ascending">
+                            <Setter TargetName="SortArrow" Property="Data" Value="{DynamicResource sortArrowUp}" />
+                            <Setter TargetName="SortArrow" Property="Visibility" Value="Visible" />
+                        </Trigger>
+                        <Trigger Property="SortDirection" Value="Descending">
+                            <Setter TargetName="SortArrow" Property="Data" Value="{DynamicResource sortArrowDown}" />
+                            <Setter TargetName="SortArrow" Property="Visibility" Value="Visible" />
+                        </Trigger>
+                        <Trigger Property="DisplayIndex" Value="0">
+                            <Setter TargetName="PART_LeftHeaderGripper" Property="Visibility" Value="Collapsed" />
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+    <Style x:Key="dg_TableRowAmbulatory" TargetType="{x:Type DataGridRow}">
+        <Setter Property="SnapsToDevicePixels" Value="True" />
+        <Setter Property="BorderThickness" Value="0,0,0,1"/>
+        <Setter Property="BorderBrush" Value="{DynamicResource BrushPrimaryBorderLight}"/>
+        <Style.Triggers>
+            <Trigger Property="IsSelected" Value="True">
+                <Setter Property="Background" Value="{DynamicResource BrushTableSelectedLightTransparent}"/>
+                <Setter Property="BorderBrush" Value="{DynamicResource BrushTableSelectedLight}"/>
+            </Trigger>
+        </Style.Triggers>
+    </Style>
+    <Style x:Key="dg_tableCellAmbulatory" TargetType="{x:Type DataGridCell}" BasedOn="{StaticResource MahApps.Styles.DataGridCell}">
+        <Setter Property="VerticalContentAlignment" Value="Stretch"/>
+        <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
+        <Setter Property="FontSize" Value="15"/>
+        <Setter Property="Height" Value="35"/>
+        <Setter Property="Foreground" Value="{DynamicResource BrushForegroundMid}"/>
+        <Setter Property="BorderBrush" Value="{DynamicResource BrushPrimaryBorderLight}"/>
+        <Setter Property="BorderThickness" Value="0,0,1,0"/>
+        <Style.Triggers>
+            <Trigger Property="IsSelected" Value="True">
+                <Setter Property="Foreground" Value="{DynamicResource BrushForegroundDark}" />
+                <Setter Property="BorderBrush" Value="{DynamicResource BrushTableSelectedLightTransparent}"/>
+            </Trigger>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter Property="Foreground" Value="{DynamicResource BrushForegroundMid}" />
+            </Trigger>
+        </Style.Triggers>
+    </Style>
+    <Style x:Key="dg_Ambulatory" TargetType="{x:Type DataGrid}" BasedOn="{StaticResource MahApps.Styles.DataGrid}">
+        <Setter Property="AlternatingRowBackground" Value="{DynamicResource BrushTableRowAlternationBackgroud}"/>
+        <Setter Property="AutoGenerateColumns" Value="False"/>
+        <Setter Property="SelectionUnit" Value="FullRow"/>
+        <Setter Property="IsReadOnly" Value="False"/>
+        <Setter Property="IsSynchronizedWithCurrentItem" Value="True"/>
+        <Setter Property="GridLinesVisibility" Value="None"/>
+        <Setter Property="ColumnHeaderStyle" Value="{DynamicResource dg_ColumnHeaderAmbulatory}"/>
+        <Setter Property="CellStyle" Value="{DynamicResource dg_tableCellAmbulatory}"/>
+        <Setter Property="RowStyle" Value="{DynamicResource dg_TableRowAmbulatory}"/>
+        <Setter Property="CanUserAddRows" Value="False"/>
+        <Setter Property="CanUserDeleteRows" Value="False"/>
     </Style>
 
 </ResourceDictionary>
