--- a/Hospital.WPF/Controls/Ambulatory/AmbDiagnostic.xaml
+++ b/Hospital.WPF/Controls/Ambulatory/AmbDiagnostic.xaml
@@ -6,9 +6,10 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:view="clr-namespace:Hospital.WPF.Views"
              xmlns:local="clr-namespace:Hospital.WPF.Controls.Ambulatory"
-             xmlns:vm="clr-namespace:Hospital.ViewModel;assembly=Hospital.ViewModel"
+             xmlns:vm="clr-namespace:Hospital.ViewModel.Ambulatory;assembly=Hospital.ViewModel"
              xmlns:controls="clr-namespace:Hospital.WPF.Controls.Ambulatory"
-             mc:Ignorable="d" 
+             mc:Ignorable="d"
+             DataContext="{Binding DiagnosticViewModel}"
              d:DesignHeight="450" d:DesignWidth="800">
     <!--<UserControl.DataContext> <vm:AmbulatoryViewModel/></UserControl.DataContext>--> 
     
